# cmake-tutorial

01_compile_one_file/: CMakeLists.txt
02_add_static_lib/somelib/: adder.cpp
02_add_static_lib/src/: CMakeLists.txt  main.cpp
03_link_shared_lib/main/: CMakeLists.txt
03_link_shared_lib/shared_lib/: math.cc
04_packaging/main/: CMakeLists.txt  main.cc
04_packaging/shared_lib/: CMakeLists.txt  my_math.h
05_install/: build.sh
05_install/external_calc/: CMakeLists.txt  CalcConfig.cmake.in  calc.cc  calc.h
05_install/main/: CMakeLists.txt  main.cc
step2_add_static_lib/: CMakeLists.txt  main.cpp
step2_add_static_lib/somelib/: CMakeLists.txt  adder.h
